--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 header {
     display: inline-flex;
-    position: fixed;
+    position: static;
     width: 95%;
     margin: 0;
     padding: 1rem;
@@ -355,7 +355,7 @@ h3 {
     display: flex;
 flex-direction: row;
 align-items: flex-start;
-padding: 0px;
+padding: 0px 10px 0px 10px;
 
 position: absolute;
 width: 1239px;
@@ -364,29 +364,7 @@ left: 101px;
 top: 1771px;
 }
 
-.menu3 {
-    display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 20px;
 
-position: static;
-width: 377px;
-height: 528px;
-left: 862px;
-top: 0px;
-
-background: #FFFFFF;
-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-border-radius: 30px;
-
-/* Inside Auto Layout */
-
-flex: none;
-order: 2;
-flex-grow: 0;
-margin: 0px 54px;
-}
 
 .m3 {
     display: flex;
@@ -511,6 +489,30 @@ flex-grow: 0;
 margin: 40px 0px;
 }
 
+.menu3 {
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 20px;
+
+position: static;
+width: 33%;
+height: 528px;
+left: 862px;
+top: 0px;
+
+background: #FFFFFF;
+box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+border-radius: 30px;
+
+/* Inside Auto Layout */
+
+flex: 1;
+order: 2;
+flex-grow: 0;
+margin: 0px 15px;
+}
+
 .menu2 {
     display: flex;
 flex-direction: row;
@@ -518,7 +520,7 @@ align-items: flex-start;
 padding: 20px;
 
 position: static;
-width: 377px;
+width: 33%;
 height: 528px;
 left: 431px;
 top: 0px;
@@ -529,10 +531,10 @@ border-radius: 30px;
 
 /* Inside Auto Layout */
 
-flex: none;
+flex: 1;
 order: 1;
 flex-grow: 0;
-margin: 0px 54px;
+margin: 0 15px;
 }
 
 .menu1 {
@@ -542,7 +544,7 @@ align-items: flex-start;
 padding: 20px;
 
 position: static;
-width: 377px;
+width: 33%;
 height: 528px;
 left: 0px;
 top: 0px;
@@ -553,10 +555,10 @@ border-radius: 30px;
 
 /* Inside Auto Layout */
 
-flex: none;
+flex: 1;
 order: 0;
 flex-grow: 0;
-margin: 0px 54px;
+margin: 0 15px;
 }
 
 .m1 {
@@ -612,7 +614,7 @@ margin: 0px 10px;
 
 .f1 {
 position: absolute;
-width: 248px;
+width: 50%;
 height: 41px;
 left: 596px;
 top: 37px;
